--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "8000:8000"
     environment:
       - OLLAMA_URL=http://localhost:11434/api/generate
-      - OLLAMA_MODEL=llama3
+      - OLLAMA_MODEL=qwen2.5-coder:1.5b
       - VECTOR_DB_URL=vector_db:6333
       - S3_ENDPOINT=http://minio:9000
       - AWS_ACCESS_KEY_ID=minioadmin
@@ -32,6 +32,12 @@ services:
       MINIO_SECRET_KEY: minioadmin
     volumes:
       - minio_data:/data
+  ollama:
+    image: ollama/ollama:latest
+    ports:
+      - "11434:11434"
+    volumes:
+      - ./models:/models  # your local model storage
 
 volumes:
   qdrant_data:
